--- a/page-recipes.html
+++ b/page-recipes.html
@@ -63,7 +63,7 @@
     <!-- 「レシピコンテンツ３」 -->
     <div class="recipes-contents flex">
       <!-- 左レシピ画像-->
-      <a href=""><img class="left-img" src="images/recipe18.jpg" alt=""></a>
+      <a href="single-recipe.html"><img class="left-img" src="images/recipe18.jpg" alt=""></a>
       <!-- 右レシピ画像 -->
       <div class="right-imgs flex">
         <a href="single-recipe.html"><img src="images/recipe19.jpg" alt=""></a>
